discussion/kv_engine/175248/175248_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Disable deprecated commands in serverless deployments

The quiet ops (and the getk variants) aren't being used
by our SDKs and we don't want them to be introduced in a
serverless deployment

Change-Id: Id5002ae3b7577501daec42a96f45e5c87bfc0594

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-24 08:41:10.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-24 09:57:05.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17700/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcbp_validators.cc:2455:9: error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
    if (isServerlessDeployment()) {
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17700/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcbp_validators.cc:2455:9:
error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17700/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38962/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/mcbp_validators.cc:2455:9:
error: use of undeclared identifier "isServerlessDeployment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38962/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16726/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46362/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19827/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27876/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18677/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7313/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
